--- a/app/app/views/words/show.html.erb
+++ b/app/app/views/words/show.html.erb
@@ -3,6 +3,11 @@
   <%= @word.word %>
 </p>
 
+
+<h2>Meanings</h2>
+<%= render @word.meanings %>
+
+
  
 <%= link_to 'Edit Word', edit_word_path(@word) %> |
 <%= link_to 'Back to Words', words_path %>
