--- a/app/app/views/words/index.html.erb
+++ b/app/app/views/words/index.html.erb
@@ -5,12 +5,19 @@
 <table>
   <tr>
     <th>Word</th>
-    <th></th>
+    <th>中文解释</th>
+    <th>访问</th>
+    <th>正确</th>
+    <th>错误</th>
   </tr>
  
   <% @words.each do |word| %>
     <tr>
       <td><%= word.word%></td>
+      <td><%= word.meanings_s%></td>
+      <td><%= word.access_count%></td>
+      <td><%= word.correct_count%></td>
+      <td><%= word.error_count%></td>
       
 	  <td><%= link_to 'Show', word_path(word) %></td>
 	  <td><%= link_to 'Edit', edit_word_path(word) %></td>
